<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.app1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.app1.ui.learn.LearnFragment"
        android:label="@string/title_elmelet"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.app1.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.app1.ui.diary.DiaryFragment"
        android:label="@string/title_naplo"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.app1.ui.profile.ProfileFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profile" />
</navigation>