<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtReminderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emlekezteto"
        android:textSize="16sp"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"/>

    <EditText
        android:id="@+id/editNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/becenev_modositas"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_modositas"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jelszo_modositas"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

</LinearLayout>
