<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trainingScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nextWorkoutLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_kovetkezo_edzesed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginBottom="12dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:elevation="4dp"
            android:padding="16dp"
            android:background="?android:attr/colorBackground"
            android:layout_gravity="center_horizontal"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edzes_cime"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/dayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nap"
                    android:paddingStart="8dp"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edzesleiras"
                    android:paddingStart="8dp"
                    android:layout_marginBottom="12dp" />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inditas"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/completedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/befejezett_edzesek_card"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:id="@+id/completedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?android:attr/listDivider"
            android:showDividers="middle" />
    </LinearLayout>
</ScrollView>
