<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/udv"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/textReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kovetkezo_edzes"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/imageLevel"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        android:src="@drawable/beginner"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="18dp" />

    <TextView
        android:id="@+id/textTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/progressTree"
        android:textAlignment="center"
        android:textSize="24sp"/>

</LinearLayout>